Performance - get distinct themes API call